ROO-2579: Post 1.1.5.RELEASE code refactor and clean up - using Map#entrySet vs less efficient Map#keySet plus Map#get